manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useless
  namespace: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: useless
  template:
    metadata:
      labels:
        app: useless
    spec:
      containers:
        - name: useless
          image: alok1408/fend:cp
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useless-v2
  namespace: dev
spec:
  replicas: 5
  selector:
    matchLabels:
      app: useless-v2
  template:
    metadata:
      labels:
        app: useless-v2
    spec:
      containers:
        - name: useless-v2
          image: pawanjadon/kabirepo:latest
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
