manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: useless-svc
  namespace: dev
spec:
  selector:
    app: useless
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: useless-v2-svc
  namespace: dev
spec:
  selector:
    app: useless-v2
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
