manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: kabirpratap.sbs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: useless-svc
            port:
              number: 80
